--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,4 @@
 option ('test', type: 'feature', value: 'auto',
     description: 'Build tests [default: auto]')
+option ('frc-libs', type: 'string', value: '',
+    description: 'Location of WPI and related support libraries')
