add luajit submodule and update .gitignore for 3rdparty directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/allwpilib"]
 	path = deps/allwpilib
 	url = https://github.com/wpilibsuite/allwpilib.git
+[submodule "deps/luajit"]
+	path = deps/luajit
+	url = https://github.com/LuaJIT/LuaJIT
