--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "Lua.addonManager.enable": false,
-    "Lua.runtime.version": "LuaJIT"
+    "Lua.runtime.version": "LuaJIT",
+    "Lua.runtime.path": [
+        "${workspaceFolder}/build/lua/?.lua",
+        "${workspaceFolder}/build/lua/?/init.lua",
+        "${workspaceFolder}/bindings/?.lua",
+        "${workspaceFolder}/bindings/?/init.lua",
+    ]
 }
