feat: start Command base class with initialization and command management methods

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,6 +25,7 @@ luabot_add_api_test(RequireAll requireall.lua)
 luabot_add_api_test(TestAddressableLED wpi/TestAddressableLED.lua)
 luabot_add_api_test(TestClass TestClass.lua)
 luabot_add_api_test(TestClib wpi/TestClib.lua)
+luabot_add_api_test(TestCommand wpi/TestCommand.lua)
 luabot_add_api_test(TestFilesystem wpi/TestFilesystem.lua)
 luabot_add_api_test(TestGeometry wpi/TestGeometry.lua)
 luabot_add_api_test(TestPose2d wpi/TestPose2d.lua)
