feat: enhance CommandScheduler to handle disabled state and update tests for command lifecycle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "${workspaceFolder}/build/lua",
     ],
     "Lua.runtime.path": [
+        "${workspaceFolder}/test/?.lua",
         "${workspaceFolder}/bindings/?.lua",
         "${workspaceFolder}/bindings/?/init.lua",
         "${workspaceFolder}/build/lua/?.lua",
