feat: add FunctionalCommand class for dynamic command creation and implement tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,7 @@ luabot_add_api_test(TestClib wpi/TestClib.lua)
 luabot_add_api_test(TestCommand wpi/TestCommand.lua)
 luabot_add_api_test(TestCommandScheduler wpi/TestCommandScheduler.lua)
 luabot_add_api_test(TestFilesystem wpi/TestFilesystem.lua)
+luabot_add_api_test(TestFunctionalCommand wpi/TestFunctionalCommand.lua)
 luabot_add_api_test(TestGeometry wpi/TestGeometry.lua)
 luabot_add_api_test(TestPose2d wpi/TestPose2d.lua)
 luabot_add_api_test(TestRobots wpi/TestRobots.lua)
