--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,6 +30,7 @@ luabot_add_api_test(TestCommandScheduler wpi/TestCommandScheduler.lua)
 luabot_add_api_test(TestFilesystem wpi/TestFilesystem.lua)
 luabot_add_api_test(TestFunctionalCommand wpi/TestFunctionalCommand.lua)
 luabot_add_api_test(TestGeometry wpi/TestGeometry.lua)
+luabot_add_api_test(TestInstantCommand wpi/TestInstantCommand.lua)
 luabot_add_api_test(TestPose2d wpi/TestPose2d.lua)
 luabot_add_api_test(TestRobots wpi/TestRobots.lua)
 luabot_add_api_test(TestSubsystem wpi/TestSubsystem.lua)
